2001-09-03  Adam Fedor  <fedor@gnu.org>

	* Source/tiff.m (NSTiffWrite): Set EXTRASAMPLES even if 0.

2001-09-02  Adam Fedor  <fedor@gnu.org>

	* Source/NSView.m (-lockFocusInRect:) Properly mark the save object.
	Do a rectviewclip in (sortof) the right place.

2001-08-31  Georg Fleischmann

	* Source/NSView.m
	[NSView lockFocusInRect:]: DPSsave(ctxt) added
	[NSView unlockFocusWithFlush:]: DPSrestore(ctxt) added

	* Headers/gnustep/gui/DPSOperators.h
	DPSrestore() and DPSsave(): new

	* Headers/gnustep/gui/GSMethodTable.h
	DPSrestore and DPSsave added

	* Headers/gnustep/gui/NSGraphicsContext.h
	-DPSrestore and -DPSsave added

	* Source/NSGraphicsContext.m
	[NSGraphicContext _inittializeMethodTable]:
	DPSrestore and DPSsave added
	[NSGraphicsContext DPSrestore]: new
	[NSGraphicsContext DPSsave]: new

2001-09-01  Adam Fedor  <fedor@gnu.org>

	* Source/NSImage.m ([NSImage -initWithCoder:]): Create _reps array
	before adding representations.
	* Source/tiff.m (NSTiffWrite): Archive alpha info.

2001-09-01  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSMenuItemCell.h
	Removed ivars mcell_highlighted and mcell_has_submenu. 
	Renamed all ivars.
	* Source/NSMenuItemCell.m
	Replaced use of mcell_highlighted with _cell.is_highlighted. 
	Removed this ivar and mcell_has_submenu from the coding methods.
	Removed method [highlight:withFrame:inView:]. in
	[drawBorderAndBackgroundWithFrame:inView:] moved duplicated out of
	if clause. in [calcSize] use cached arrow image for submenu sizing and
	changed image size code. Change all composite operators from
	NSCompositeCopy to NSCompositeSourceOver. Use the cached colour if
	it is computed otherwise ignore it. In [drawWithFrame:inView:] allways call 
	[drawBorderAndBackgroundWithFrame:inView:] and check for border there.
	Moved lockfocus calls down one level. In [drawInteriorWithFrame:inView:]
	removed some of the checks already done in [drawWithFrame:inView:].
	Replaced all the highlight/state logic with the one used in